# ComputerVision_ObjectDetection_FeatureMatching

./: CMakeLists.txt  README.md  features_detection_TEST.cpp  main.cpp  main1.cpp  pipeline.md
include/: FeatureFactory.hpp  Filter.hpp  ModelsDetector.hpp  ObjectDetector.hpp  Output.hpp  Preprocessing.hpp  TestsDetector.hpp  metrics.h  metrics.hpp  objectModel.hpp  preprocessing.hpp  utils.hpp
src/: FeatureFactory.cpp  Filter.cpp  ModelsDetector.cpp  ObjectDetector.cpp  Output.cpp  Preprocessing.cpp  TestsDetector.cpp  main.cpp  metrics.cpp  preprocessing.cpp  utils.cpp
